--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,44 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    font-family: 'Itim'cursiv;
+    font-family: 'Itim', cursive;
 }
-.background{
-    background-color: #121818;
+
+.background {
+    background-color: #12181B;
     height: 100vh;
     padding-top: 1px;
 }
-.title{
+
+.title {
     color: white;
     text-align: center;
     font-size: 40px;
     margin-top: 10%;
-
 }
-.display{
-    color:white;
+
+.display {
+    color: white;
     font-size: 25px;
     text-align: center;
     margin-top: 1em;
     margin-bottom: 1em;
 }
-.hide{
+
+.hide {
     display: none;
 }
-.container{
+
+.container {
     margin: 0 auto;
     display: grid;
     grid-template-columns: 33% 33% 33%;
     grid-template-rows: 33% 33% 33%;
     max-width: 300px;
+
 }
-.tile{
+
+.tile {
     border: 1px solid white;
     min-width: 100px;
     min-height: 100px;
@@ -41,28 +47,38 @@
     align-items: center;
     font-size: 50px;
     cursor: pointer;
-    }
-    .playerX{
-        color: #09c372;
-    }
-    .playerO{
-        color: #498AFB;
-    }
-    .controls{
-        display:flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin-top: 1em;
-    }
-    #reset {
-        background-color:#ff3860;
-        color: white;
-        padding: 8px;
-        border-radius: 8px;
-        border: none;
-        font-size: 20px;
-        margin-left: 1em;
-        cursor: pointer;
+}
 
-    }
+.playerX {
+    color: #09C372;
+}
+
+.playerO {
+    color: #498AFB;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+}
+
+.controls button {
+    color: white;
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 20px;
+    margin-left: 1em;
+    cursor: pointer;
+}
+
+.restart {
+    background-color: #498AFB;
+}
+
+#reset {
+    background-color: #FF3860;
+}
